# server-controller

./: .env.example  .gitignore  CHANGELOG.md  CODE_CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOY.md  INDEX.md  JWT_SECURITY_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.FIRST.md  README.md  SECURITY_AUDIT_RESULTS.md  SECURITY_FIX_COMPLETE.md  SETUP_DEPLOYMENT.md  deploy.sh  test_jwt_security.sh
.github/workflows/: agent-ci.yml  android-ci.yml  release.yml
agent/: Cargo.toml  README.md  deploy_all.sh
agent/src/: audit.rs  error.rs  lib.rs  main.rs
agent/src/api/: handlers.rs  middleware.rs  mod.rs  rate_limit.rs  websocket.rs
agent/src/auth/: mod.rs
agent/src/commands/: mod.rs
agent/src/notifications/: ntfy.rs
agent/src/security/: incidents.rs  intel.rs  mod.rs  wp_admin_audit.rs
agent/src/services/: mod.rs
agent/src/telemetry/: alerts.rs  backup.rs  cpu.rs  disk.rs  docker.rs  memory.rs  mod.rs  network.rs  phpfpm.rs  processes.rs  security.rs  ssl.rs  temperature.rs
agent/src/watchdog/: circuit_breaker.rs  event.rs  mod.rs  probes.rs  remediation.rs
agent/systemd/: pocket-noc-agent.service
agent/tests/: api_tests.rs  watchdog_tests.rs
controller/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
controller/app/: README.md  build.gradle.kts
controller/app/src/main/: AndroidManifest.xml
controller/app/src/main/java/com/pocketnoc/: MainActivity.kt  PocketNOCApplication.kt
controller/app/src/main/java/com/pocketnoc/config/: PocketNOCConfig.kt
controller/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  widget_background.xml
controller/app/src/main/res/layout/: widget_server_status.xml
controller/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
controller/app/src/main/res/mipmap-mdpi/: ic_launcher.xml
controller/app/src/main/res/mipmap-xhdpi/: ic_launcher.xml
controller/app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
controller/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
controller/app/src/main/res/xml/: network_security_config.xml  widget_server_status_info.xml
controller/app/src/test/java/com/pocketnoc/: HealthStatusCalculatorTest.kt  ModelsTest.kt
controller/gradle/wrapper/: gradle-wrapper.properties
docs/: ANDROID_APP.md  API.md  ARCHITECTURE.md  DATA_MODELS.md  DEPLOYMENT.md  GLOSSARY.md  SECURITY.md  SETUP.md  TESTING.md
domain-monitor/: .env.example  Cargo.toml
domain-monitor/src/: main.rs
mu-plugins/: winup-plugin-guard.php
(+74 files in other folders)
